Fix collapsing margin in container class

--- a/static/scss/base/page.scss
+++ b/static/scss/base/page.scss
@@ -3,6 +3,7 @@ body {
 }
 
 .container {
+    overflow: auto;
     background-color: #FFFFFF;
     padding-bottom: 1em;
 }
